fix update notifier covering beamer bell

--- a/src/css/app.css.scss
+++ b/src/css/app.css.scss
@@ -154,7 +154,7 @@ input[type="file"] {
 .update-notifier {
   @include application-text;
   position: absolute;
-  right: 15px;
+  right: 50px;
   height: 30px;
   top: 10px;
   border-radius: 100px;
@@ -215,6 +215,9 @@ div.update-notifier:hover {
 #beamer-bell {
   .beamer_icon {
     top: 5px;
+  }
+  svg {
+    vertical-align: text-bottom;
   }
 }
 
